# ai-tools

./: .bash_ollama_actions  .flake8  .gitignore  INSTALL.md  README.md  app.py  binary_installation.md  build_binary.py  example.env  main.py  mypy.ini  pyproject.toml  recognized_text.txt  reqs.txt  semantic_search.py  setup.py
.github/workflows/: ci.yml
data/actions/: run.yml
docs/: binary_installation.md  development_guide.md  game_module_development.md  installation_guide.md  shell_integration_guide.md  user_guide.md
home/: .bashrc
lib/: audio.py  chat.py  ollama_chat.py  sim.py
lib/backend/: semantic_search.py
lib/chat/: history.py  history_ollama.py  ollama.py  openai.py
lib/config/: database.py
lib/docs/: text.txt
lib/mcp/: actions.py  db_connector.py  transport.py
lib/modules/: ai.py  speech.py
lib/storage/: docs.py
src/ai_tools/: __init__.py  __main__.py  main.py
src/ai_tools/backend/: run.py
src/ai_tools/chat/: history.py
src/ai_tools/config/: database.py
src/ai_tools/mcp/: actions.py  db_connector.py  transport.py
src/ai_tools/modules/: ai.py  audio.py  msfs.py  shell_tools.py  sim.py
src/ai_tools/modules/games/: __init__.py  dummy_game.py  msfs.py
src/ai_tools/shell/: __init__.py  bash_aitools  powershell_aitools.ps1
src/ai_tools/storage/: docs.py
tests/unit/: test___main__.py  test_main.py
tests/unit/backend/: test_run.py
tests/unit/config/: test_database.py
tests/unit/mcp/: test_actions.py  test_db_connector.py  test_transport.py
tests/unit/modules/: test_shell_tools.py  test_sim.py
vosk/: info.txt
(+2 files in other folders)
